# Lab-Rotation-CBG-ETH

./: .gitignore  README.md  allocate_parallel.sh  run_jobJupyter.sh  sbatch_test.sh
data/: Cmax_viability_Matrix_GDSC1_COSMIC_IDs_cell_lines_with_exp_with_Hist_Site_Type.csv  Cmax_viability_Matrix_GDSC2_COSMIC_IDs_cell_lines_with_exp_with_Hist_Site_Type.csv  Drug_Metadata.ipynb  Inspect Data.ipynb  Inspect Zeroshot.ipynb  Inspect piSCVI.ipynb  Reduce ZeroShot Dataset.ipynb  Split_Plates.ipynb  Subset_GDSC_Controls.ipynb  ZeroShot Data.ipynb  ZeroShot Inputs.ipynb  append_fcr.sh  append_fcr_embeddings.py  gdsc_smiles.csv  launch_process_adata.sh  normalize_gdsc_names.py  prepare_all.sh  prepare_plate.py  process_adata.py  process_adata.sh  run.sh
experiments/: all_umaps.py  compare_fcr_raw.ipynb  config_parallel.json  config_template.json  fcr_run.py  hyperparam_sweep.py  launch_FCR.sh  plot_umap_progression.ipynb  plot_umaps.ipynb  run_FCR.sh  run_parallel_FCR.sh  run_sweep.sh  sweep_config.yaml  umaps.sh  view_results.py  view_umaps.py  weak_decoder_sweep.yaml
fcr/: Explain Latents.ipynb  License.txt  __init__.py  config_large_scale.json  config_template.json  create_init_test_dataset.ipynb  experiment_template.py  fcr.py  fcr_euler24092025.yml  run_fcr.py  (+3 more)
zeroshot_amr/: pyproject.toml
zeroshot_amr/data/: check.sh  check_embeddings.py  generate_inputs.py  inputs.sh  launch_inputs.sh
zeroshot_amr/experiments/: evaluate.sh  evaluate_prediction.py  launch_fp.sh  launch_runs.sh  run.sh
zeroshot_amr/notebooks/: Barplots.ipynb  Sanity Checks and Aggregate Prediction File.ipynb  Sanity Checks.ipynb  test_evaluation.ipynb
zeroshot_amr/repo/: README.md
zeroshot_amr/repo/code/: ResAMR_classifier.py  preprocessing.py  pyproject.toml
zeroshot_amr/repo/code/models/: classifier.py
zeroshot_amr/repo/mac_uv_env/: pyproject.toml  requirements.txt
zeroshot_amr/tutorial/: run.sh  test_evaluation.ipynb
zeroshot_amr/tutorial/data/: data_splits.csv  drug_fingerprints_Mol_selfies.csv
zeroshot_amr/tutorial/data/notUseful/: drug_smiles_embedding_any.csv
(+114 files in other folders)
